--- a/Oops-Android/app/src/main/res/layout/activity_login.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_login.xml
@@ -64,7 +64,7 @@
                 android:text="입력된 이메일이 올바르지 않아요"
                 android:textSize="12sp"
                 android:textColor="@color/Red_Dark"
-                android:fontFamily="@font/pretendard_semibold"
+                android:fontFamily="@font/pretendard_regular"
                 android:visibility="gone"
                 android:layout_marginTop="4dp"
                 android:layout_marginStart="24dp"/>
@@ -119,7 +119,7 @@
                 android:text="비밀번호는 8자리 이상, 특수문자가 포함돼야 해요"
                 android:textSize="12sp"
                 android:textColor="@color/Red_Dark"
-                android:fontFamily="@font/pretendard_semibold"
+                android:fontFamily="@font/pretendard_regular"
                 android:visibility="gone"
                 android:layout_marginTop="4dp"
                 android:layout_marginStart="24dp"/>
