--- a/Oops-Android/app/src/main/res/layout/fragment_todo.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_todo.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:scrollbars="none">
         <LinearLayout
+            android:id="@+id/lLayout_todo_top"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
